--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
     "preserveConstEnums": true,
     "sourceMap": true,
     "target": "ES2019",
-    "outDir": "dist"
+    "outDir": "dist",
+    "jsx": "react"
   },
   "files": [
     "packages/**/*"
